fix: spacings and sizes

--- a/style.css
+++ b/style.css
@@ -11,21 +11,23 @@
 
 html,
 body {
+  background: #d69a3a;
+  color: #54380f;
   height: 100%;
+  padding: 2vh 2vw;
 }
 
 .main {
-  background: #d69a3a;
-  color: #54380f;
   display: flex;
   flex-direction: column;
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
-  font-size: clamp(12px, 4vw + 1px, 30px);
+  font-size: clamp(12px, 2.5vw, 30px);
   font-weight: 300;
-  min-height: 100%;
-  padding: 5%;
-  padding-bottom: 10%;
+  gap: 1em;
+  height: 100%;
+  max-width: 90vw;
+  justify-content: space-between;
   text-align: center;
 }
 
@@ -38,13 +40,12 @@ body {
   justify-content: center;
 }
 
-.header,
-.footer {
-  height: 10vh;
+.section {
+  flex-direction: column;
 }
 
 .header__title {
-  font-size: 3rem;
+  font-size: 2em;
   font-weight: 200;
 }
 
@@ -55,15 +56,11 @@ body {
 .section,
 .footer {
   align-content: center;
-  gap: 1rem;
-}
-
-.section {
-  flex: 1;
+  gap: 1em;
 }
 
 .section__image {
-  height: 14rem;
+  height: 10em;
 }
 
 .section__title,
@@ -82,5 +79,5 @@ body {
 }
 
 .footer__icon {
-  font-size: 2rem;
+  font-size: 1.5em;
 }
